[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
memoize = "0.4.1"
# argh = "0.1.12"
# console_engine = "2.5.0"
# derive_more = "0.99.17"
# itertools = "0.10.5"
# nom = "7.1.1"
# num-bigint = "0.4.3"
# num-traits = "0.2.15"
# once_cell = "1.16.0"
pathfinding = "4.4.0"
pico-args = { version = "0.5.0", features = [
    "combined-flags",
    "short-space-opt",
] }
# petgraph = "0.6.2"
rayon = "1.6.1"
# serde = { version = "1.0", features = ["serde_derive"] }
# serde_json = "1.0.89"

# [profile.release]
# codegen-units = 1 
# lto = true    
# strip = true  
# panic = "abort" 

[features]
default = []
# default = ["visualize"]
visualize = []
